# udp_vc

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  client.c  gen_keys.sh  server.c
src/client/: CMakeLists.txt  audio_system.c  audio_system.h  client.c  client.h  main.c  shared.h
src/server/: CMakeLists.txt  client_list.c  client_list.h  main.c  server.c  server.h
src/shared/: CMakeLists.txt  commands.c  commands.h  config.h  config.h.in  networking.c  networking.h  polling.c  polling.h  ssl_utils.c  ssl_utils.h
tests/: CMakeLists.txt  commands_tests.c  networking_tests.c  tests.c  tests.h  z_malloc.h
